Fixes legal text too close to button
[ Delivers #96521170 ]

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -66,7 +66,9 @@ $dark-text: #5B5A5A;
 body.app { background-color: #F2F1F1; font-family: $body-font; 
 	#logo { height: 30px; opacity: 0.5; @include filter( brightness(3) ); } }
 
-body.landing { background-color: white; font-family: $body-font; }
+body.landing { background-color: white; font-family: $body-font; 
+	#logo { opacity: 1 !important; } 
+	.navbar-header { float: left; margin-left: 5px; } }
 
 .login-wrapper { width: 100%; height: 100%; background: $green; padding-top: 250px; }
 
